cabal-version:      3.0
name:               arxiv-client-cli
version:            0.1.0.0
synopsis:           Command line interface for arxiv-client, tool to search and download papers from arXiv.org
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Eiko
maintainer:         eikochanowo@outlook.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable arxiv-client-cli
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    ghc-options:     -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base
      , arxiv-client
      , text
      , bytestring
      , directory
      , time
      , req
      , xml-conduit
      , conduit
      , containers
      , modern-uri
      , pretty-simple
      , optparse-applicative
      , optparse-generic
      , megaparsec
      , filepath
      , process
    default-language: GHC2021

    hs-source-dirs:   app
    default-language: GHC2021
