cabal-version:      3.0
name:               arxiv-client-cli
version:            0.1.0.0
synopsis:           Command line tool to search and download papers from arXiv.org
description:        This is a command line interface (cli) application wrapping the library arxiv-client, which is a Haskell tool to search and download papers from arXiv.org using a simple query DSL.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Eiko
maintainer:         eikochanowo@outlook.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files: CHANGELOG.md
               , README.md
-- extra-source-files:
source-repository head
    type: git
    location: https://github.com/Eiko-Tokura/arxiv-client-cli.git

common warnings
    ghc-options: -Wall

executable arxiv-client-cli
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    -- ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    -- ^ we will enable them after we do parallel downloading
    build-depends:
        base              >=4   && <5
      , aeson             >=2   && <2.3
      , arxiv-client      >=0.1 && < 0.2
      , bytestring        >=0.10 && <0.13
      , text              >=2.0  && <2.2
      , directory         >=1.3  && <1.4
      , time              >=1.11 && <1.15
      , optparse-generic  >=1.6 && <1.7
      , megaparsec        >=9.5  && <9.8
      , filepath          >=1.5.2 && <1.5.5
      , process           >=1.6   && <1.7
    hs-source-dirs:   app
    default-language: GHC2021
